--- a/styles.css
+++ b/styles.css
@@ -537,15 +537,16 @@ a {
     text-align: center;
 
 }
-footer {
-  background-color: rgb(3, 2, 2);
-  color: #fff;
-  padding: 20px 0;
-  text-align: center;
+footer.footer {
+  height: 50px;
+  width: 100%;
+  background-color: #000000;
 }
 
-footer p {
-  margin: 0;
+p.copyright {
+  color: #fff;
+  line-height: 40px;
   font-size: 15px;
-}
-    
+  text-align: center;
+  align-items: center;
+}    
